add frontend ui application
